tests/calico_testcases/example_policies/testcase4/testcase4-global-networkpolicy2.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase4-global-networkpolicy2
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: unique-label == 'defaultNameSpace'
  egress:
  - action: Allow
    destination:
      namespaceSelector: unique-label == 'defaultNameSpace'
      notSelector: tier  == 'agent'
