tests/calico_testcases/example_policies/testcase4/testcase4-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkPolicyLists:
  - name: np1
    networkPolicyList:
      - testcase4-global-networkpolicy1.yaml
      - ../testcase1/testcase1-open-default.yaml
    expected_warnings: 0

  - name: np2
    networkPolicyList:
      - testcase4-global-networkpolicy1.yaml
      - ../testcase1/testcase1-open-default.yaml
    expected_warnings: 0

queries:
  - name: policies_not_vacuous
    vacuity:
      - np1
      - np2
    expected: 0

  - name: policies_not_empty
    emptiness:
      - np1
      - np2
    expected: 0

  - name: redundancy
    redundancy:
      - np1
      - np2
    expected: 0

  - name: np1_equiv_np2
    equivalence:
      - np1
      - np2
    expected: 0
